# Smart-Hostel-Management-System

./: CMakeLists.txt  LICENSE  README.md  complaintmanagement.cpp  complaintmanagement.h  complaintmanagement.ui  dialog.cpp  dialog.h  dialog.ui  feemanagement.cpp  feemanagement.h  feemanagement.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  roommanagement.cpp  roommanagement.h  roommanagement.ui  studentmanagement.cpp  studentmanagement.h  studentmanagement.ui
.qtcreator/: .gitignore
